// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Collapsible > should render open: false > expected html 1`] = `
<div>
  <details
    id="_r_1_"
  >
    <summary
      class="cursor-pointer marker:text-blue-900"
      id="_r_1_-summary"
    >
      <span
        class="ml-4 inline-block text-blue-900 hover:underline"
      >
        <div>
          summary
        </div>
      </span>
    </summary>
    <div
      class="mt-2 border-l-[6px] border-gray-400 px-6 py-4"
      id="_r_1_-content"
    >
      <div>
        test
      </div>
    </div>
  </details>
</div>
`;

exports[`Collapsible > should render open: true > expected html 1`] = `
<div>
  <details
    id="_r_0_"
    open=""
  >
    <summary
      class="cursor-pointer marker:text-blue-900"
      id="_r_0_-summary"
    >
      <span
        class="ml-4 inline-block text-blue-900 hover:underline"
      >
        <div>
          summary
        </div>
      </span>
    </summary>
    <div
      class="mt-2 border-l-[6px] border-gray-400 px-6 py-4"
      id="_r_0_-content"
    >
      <div>
        test
      </div>
    </div>
  </details>
</div>
`;
